font sizes and spacing fixes

--- a/src/app/mainstyle.scss
+++ b/src/app/mainstyle.scss
@@ -659,6 +659,12 @@ header {
       box-shadow: none;
     }
   }
+  .vr {
+    background-color: var(--placholder-color);
+    opacity: 1;
+    height: 20px;
+    margin: auto;
+  }
 }
 
 // button styles
@@ -724,7 +730,7 @@ header {
     border: 1px solid var(--neutral-800);
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
     border-radius: 8px;
-    font-size: var(--fs12);
+    // font-size: var(--fs12);
     color: var(--neutral-800);
     padding: 8px 16px;
     display: flex;
@@ -813,6 +819,8 @@ header {
   img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    object-position: center top;
   }
 }
 .findtalent {
